--- a/src/cgi-bin/index.html
+++ b/src/cgi-bin/index.html
@@ -3,6 +3,7 @@ layout: aaf
 ---
 <center>
     <h1>Call Us TODAY! (610) 550-8798</h1>
+    <h2>E-Mail us at <a href="mailto:questions@aboveaveragefriendships.com">questions (at) aboveaveragefriendships (dot) com</a></h2>
 </center>
 
 <table>
