If you're gonna break the fourth wall, you need to really break it.

--- a/src/cgi-bin/about.html
+++ b/src/cgi-bin/about.html
@@ -31,7 +31,7 @@ page:
     <tbody>
         <tr>
             <td>
-                <a target="_top" title="{{ $.page.fwcomment }}" href="https://thispersondoesnotexist.com">
+                <a target="_parent" title="{{ $.page.fwcomment }}" href="https://thispersondoesnotexist.com">
                     <img src="/assets/images/people/todd.gif">
                 </a>
 
@@ -40,7 +40,7 @@ page:
                 </p>
             </td>
             <td>
-                <a target="_top" title="{{ $.page.fwcomment }}" href="https://thispersondoesnotexist.com">
+                <a target="_parent" title="{{ $.page.fwcomment }}" href="https://thispersondoesnotexist.com">
                     <img src="/assets/images/people/randy.gif">
                 </a>
 
