Because, yea, why not make a joke website responsive af?

--- a/src/cgi-bin/index.html
+++ b/src/cgi-bin/index.html
@@ -1,56 +1,48 @@
 ---
 layout: aaf
 ---
-<table>
-    <thead>
-        <tr>
-            <th>Welcome to Above-Average...</th>
-            <th>We specialize in...</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>
-                <ul>
-                    <li><h2>Service</h2></li>
-                    <li><h2>Quality</h2></li>
-                    <li><h2>Professionalism</h2></li>
-                    <li><h2>Compliance with local and federal laws</h2></li>
-                    <li><h2>Square dealing</h2></li>
-                    <li><h2>Business Partnerships</h2></li>
-                    <li><h2>...and FRIENDSHIPS!</h2></li>
-                </ul>
-            </td>
+<div class="col-or-rows">
+    <section>
+        <h1>Welcome to Above-Average...</h1>
+        <ul>
+            <li><h2>Service</h2></li>
+            <li><h2>Quality</h2></li>
+            <li><h2>Professionalism</h2></li>
+            <li><h2>Compliance with local and federal laws</h2></li>
+            <li><h2>Square dealing</h2></li>
+            <li><h2>Business Partnerships</h2></li>
+            <li><h2>...and FRIENDSHIPS!</h2></li>
+        </ul>
+    </section>
 
-            <td>
-                <ul>
-                    <li>
-                        <a href="/cgi-bin/services.html#web-design">
-                            <h2>Web Site Design</h2>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/cgi-bin/services.html#consulting">
-                            <h2>Consulting Services</h2>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/cgi-bin/services.html#internet">
-                            <h2>Internet Access</h2>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/cgi-bin/services.html#support">
-                            <h2>Professional and Commercial Support</h2>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/cgi-bin/services.html#coding">
-                            <h2>Computer Programming</h2>
-                        </a>
-                    </li>
-                </ul>
-            </td>
-        </tr>
-    </tbody>
-</table>
+    <section>
+        <h1>We specialize in...</h1>
+        <ul>
+            <li>
+                <a href="/cgi-bin/services.html#web-design">
+                    <h2>Web Site Design</h2>
+                </a>
+            </li>
+            <li>
+                <a href="/cgi-bin/services.html#consulting">
+                    <h2>Consulting Services</h2>
+                </a>
+            </li>
+            <li>
+                <a href="/cgi-bin/services.html#internet">
+                    <h2>Internet Access</h2>
+                </a>
+            </li>
+            <li>
+                <a href="/cgi-bin/services.html#support">
+                    <h2>Professional and Commercial Support</h2>
+                </a>
+            </li>
+            <li>
+                <a href="/cgi-bin/services.html#coding">
+                    <h2>Computer Programming</h2>
+                </a>
+            </li>
+        </ul>
+    </section>
+</div>
