--- a/src/cgi-bin/about.html
+++ b/src/cgi-bin/about.html
@@ -6,49 +6,40 @@ page:
 
     These two pictures are not of actual people...they are entirely computer generated.  NVIDIA released a paper in 2018 on using machine learning to take source training data and output realistic-looking faces.  It's beyond wild because they (for the most part) are well out of the uncanny valley-- you generally think they're real and they don't (generally) make you think they might be fake.  Think if it as a deep, deep fake.  Check it out at thispersondoesnotexist.com.  Each(ish) refresh will generate a brand new person that never existed in a photo that was never taken.  Future's here, folks, and it's pure nightmare fuel."
 ---
-<center>
-    <h1>About Us</h1>
+<h1>About Us</h1>
 
-    <p style="width: 50%">
-        Above-Average Friendships was started in 1997 by Todd Sopaczewicz &amp; Randy LeSean to make using and working with computers easier and better.  The Internet (and now the World Wide Web) have revolutionized how people interact with each other.  Our company is dedicated to giving people access to computers and the Internet to help with their business, tell people <span title="this was deliberate...">there</span> interests, and connect the world together.
-    </p>
-</center>
+<p>
+    Above-Average Friendships was started in 1997 by Todd Sopaczewicz &amp; Randy LeSean to make using and working with computers easier and better.  The Internet (and now the World Wide Web) have revolutionized how people interact with each other.  Our company is dedicated to giving people access to computers and the Internet to help with their business, tell people <span title="this was deliberate...">there</span> interests, and connect the world together.
+</p>
 
-<table>
-    <thead>
-        <tr>
-            <th style="width: 50%">
-                Todd Sopaczewicz
-                <small>Co-Founder, Manager</small>
-            </th>
+<div class="col-or-rows">
+    <section>
+        <h1>
+            Todd Sopaczewicz
+            <small>Co-Founder, Manager</small>
+        </h1>
 
-            <th>
-                Randy LeSean
-                <small>Co-Founder, Lead Programmer</small>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>
-                <a target="_parent" title="{{ $.page.fwcomment }}" href="https://thispersondoesnotexist.com">
-                    <img src="/assets/images/people/todd.gif">
-                </a>
+        <a target="_parent" title="{{ $.page.fwcomment }}" href="https://thispersondoesnotexist.com">
+            <img src="/assets/images/people/todd.gif">
+        </a>
 
-                <p>
-                    Todd is a Pennsylvania native who has always had a keen interest in electronics and technology.  He decided to use that passion to help people see the potential in the Internet the way he does, and to bring knowledge and access to people.  He has over ten years experience working with customers on computer problems, as well as being an early user of the Information Super-highway.  In his spare time, he likes to build PCs, tinker with transistor radios, and has a budding interest in soapmaking at home.  Todd attended Kutztown University, where he earned a B.S. in Business Administration.
-                </p>
-            </td>
-            <td>
-                <a target="_parent" title="{{ $.page.fwcomment }}" href="https://thispersondoesnotexist.com">
-                    <img src="/assets/images/people/randy.gif">
-                </a>
+        <p>
+            Todd is a Pennsylvania native who has always had a keen interest in electronics and technology.  He decided to use that passion to help people see the potential in the Internet the way he does, and to bring knowledge and access to people.  He has over ten years experience working with customers on computer problems, as well as being an early user of the Information Super-highway.  In his spare time, he likes to build PCs, tinker with transistor radios, and has a budding interest in soapmaking at home.  Todd attended Kutztown University, where he earned a B.S. in Business Administration.
+        </p>
+    </section>
 
-                <p>
-                    Randy is from Union, New Jersey, where he spent his early days working as a clerk at his father's shop.  There he learned the ins and outs of running a business.  He moved on to work as a computer programmer for an outfit that works with banks, where he learned a great deal about the finance world.  He spends his spare time relaxing at home and spending time with his three children and wife.  Randy has an A.A.B in Finance from Rutgers University, Camden.
-                </p>
-            </td>
-        </tr>
-    </tbody>
-</table>
+    <section>
+        <h1>
+            Randy LeSean
+            <small>Co-Founder, Lead Programmer</small>
+        </h1>
 
+        <a target="_parent" title="{{ $.page.fwcomment }}" href="https://thispersondoesnotexist.com">
+            <img src="/assets/images/people/randy.gif">
+        </a>
+
+        <p>
+            Randy is from Union, New Jersey, where he spent his early days working as a clerk at his father's shop.  There he learned the ins and outs of running a business.  He moved on to work as a computer programmer for an outfit that works with banks, where he learned a great deal about the finance world.  He spends his spare time relaxing at home and spending time with his three children and wife.  Randy has an A.A.B in Finance from Rutgers University, Camden.
+        </p>
+    </section>
+</div>
