--- a/src/cgi-bin/about.html
+++ b/src/cgi-bin/about.html
@@ -4,7 +4,7 @@ page:
     fwcomment: "Okay, fourth wall break for a moment...
 
 
-    These two pictures are not of actual people...they are entirely computer generated.  NVIDIA released a paper in 2018 on using machine learning to take source training data and output realistic-looking faces.  It's beyond wild because they (for the most part) are well out of the uncanny valley-- you generally think they're real and they don't (generally) make you think they might be fake.  Think if it as a deep, deep fake.  Check it out at thispersondoesnotexist.com.  Each(ish) refresh will generate a brand new person that never existed in a photo that was never taken.  Future's here, folks, and it's pure nightmare fuel."
+    These two pictures are not of actual people...they are entirely computer generated.  NVIDIA released a paper in 2018 on using machine learning to take source training data and output realistic-looking faces.  It's beyond wild because they (for the most part) are well out of the uncanny valley-- you generally think they're real and they don't tweak that 'this might be fake' reflex, which is very hard because humans are *extremely* good at knowing what is a face, and importantly, what isn't.  Think if it as a deep, deep fake.  Check it out at thispersondoesnotexist.com.  Each(ish) refresh will generate a brand new person that never existed in a photo that was never taken.  Future's here, folks, and it's pure nightmare fuel."
 ---
 <h1>About Us</h1>
 
