Specifics are restraints: use judiciously

--- a/src/cgi-bin/about.html
+++ b/src/cgi-bin/about.html
@@ -39,7 +39,7 @@ page:
         </a>
 
         <p>
-            Randy is from Union, New Jersey, where he spent his early days working as a clerk at his father's shop.  There he learned the ins and outs of running a business.  He moved on to work as a computer programmer for an outfit that works with banks, where he learned a great deal about the finance world.  He spends his spare time relaxing at home and spending time with his three children and wife.  Randy has an A.A.B in Finance from Rutgers University, Camden.
+            Randy hails from New Jersey, where he spent his early days working as a clerk at his father's shop.  There he learned the ins and outs of running a business.  He moved on to work as a computer programmer for an outfit that works with banks, where he learned a great deal about the finance world.  He spends his spare time relaxing at home and spending time with his three children and wife.  Randy has an A.A.B in Finance from Rutgers University, Camden.
         </p>
     </section>
 </div>
